// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout works as expected with no tabs 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "birthday": null,
            "counts": Object {
              "articles": 0,
              "artworks": 0,
              "partner_shows": 0,
            },
            "current_shows": null,
            "has_metadata": false,
            "id": null,
            "internalID": null,
            "name": null,
            "nationality": null,
            "past_large_shows": null,
            "past_small_shows": null,
            "upcoming_shows": null,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`layout works as expected with one tab 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "birthday": null,
            "counts": Object {
              "articles": 0,
              "artworks": 0,
              "partner_shows": 0,
            },
            "current_shows": null,
            "has_metadata": true,
            "id": null,
            "internalID": null,
            "name": null,
            "nationality": null,
            "past_large_shows": null,
            "past_small_shows": null,
            "upcoming_shows": null,
          }
        }
      />
      <View
        style={
          Object {
            "paddingTop": 30,
          }
        }
      >
        <About
          artist={
            Object {
              "birthday": null,
              "counts": Object {
                "articles": 0,
                "artworks": 0,
                "partner_shows": 0,
              },
              "current_shows": null,
              "has_metadata": true,
              "id": null,
              "internalID": null,
              "name": null,
              "nationality": null,
              "past_large_shows": null,
              "past_small_shows": null,
              "upcoming_shows": null,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`layout works as expected with three tabs 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  scrollsToTop={true}
>
  <View>
    <View
      style={
        Object {
          "paddingLeft": 40,
          "paddingRight": 40,
        }
      }
    >
      <Header
        artist={
          Object {
            "birthday": null,
            "counts": Object {
              "artworks": 2,
              "partner_shows": 1,
            },
            "current_shows": null,
            "has_metadata": true,
            "id": null,
            "internalID": null,
            "name": null,
            "nationality": null,
            "past_large_shows": null,
            "past_small_shows": null,
            "upcoming_shows": null,
          }
        }
      />
      <View>
        <SwitchView
          onSelectionChange={[Function]}
          selectedIndex={1}
          style={
            Object {
              "marginBottom": 30,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 30,
            }
          }
          titles={
            Array [
              "ABOUT",
              "WORKS",
              "SHOWS",
            ]
          }
        />
        <View>
          <Artworks
            artist={
              Object {
                "birthday": null,
                "counts": Object {
                  "artworks": 2,
                  "partner_shows": 1,
                },
                "current_shows": null,
                "has_metadata": true,
                "id": null,
                "internalID": null,
                "name": null,
                "nationality": null,
                "past_large_shows": null,
                "past_small_shows": null,
                "upcoming_shows": null,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
